<resources>
    <string name="app_name">MyHuynh</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview_login_button">Login</string>
    <string name="text_password">●●●●●●●●</string>
    <string name="text_user_email">user@email.com</string>
    <string name="textview_new_to_scratch">New to Scratch?</string>
    <string name="textview_create_account_here">Create Account Here</string>
    <string name="textview_password">Password</string>
    <string name="textview_forgot_password">Forgot password?</string>
    <string name="textview_email_address">Email address</string>
    <string name="textview_request_login">Please login to continue.</string>
    <string name="textview_welcome_back_scratch">Welcome Back!</string>
    <string name="text_user_name">Nick Evans</string>
    <string name="text_view_already_have_an_account">Already have an account?</string>
    <string name="textview_login_here">Login Here</string>
    <string name="textview_email">Email</string>
    <string name="textview_full_name">Full Name</string>
    <string name="textview_create_account_to_continue">Create account to continue.</string>
    <string name="textview_start_from_scratch">Start from Scratch</string>
    <string name="textview_save_profile">Save Profile</string>
    <string name="text_user_phone">+1 234 567 89</string>
    <string name="text_user_bio">Potato Master</string>
    <string name="textview_edit_profile_picture">Edit Profile Picture</string>
    <string name="textview_back_to_profile">Back to Profile</string>
    <string name="textview_private_information">Private Information</string>
    <string name="textview_phone">Phone</string>
    <string name="textview_bio">Bio</string>
    <string name="textview_edit_profile">Edit Profile</string>
    <string name="hint_enter_your_email">Enter your email</string>
    <string name="hint_enter_your_password">Enter your password</string>
    <string name="hint_enter_your_name">Enter your name</string>
    <string name="hint_enter_your_bio">Enter your bio</string>
    <string name="textview_my_kitchen">My Kitchen</string>
    <string name="textview_nick_evans">Nick Evans</string>
    <string name="textview_potato_master">Potato Master</string>
    <string name="textview_settings">Settings</string>
    <string name="textview_23k_likes">23k likes</string>
    <string name="textview_584_followers">584 followers</string>
    <string name="textview_dot">.</string>
    <string name="tablayout_title_recipes">20  \n  Recipes</string>
    <string name="tablayout_title_saved">75  \n  Saved</string>
    <string name="tablayout_title_following">248  \n Following</string>
    <string name="tv_title_create_account">Do you want Create Account</string>
    <string name="toast_create_now">Create Now</string>
    <string name="toast_cancel">Canceled</string>
    <string name="toast_added">Added</string>
    <string name="toast_edited">Edited</string>
    <string name="dialog_title_add_todo">Add To Do</string>
    <string name="dialog_title_edit">Edit To Do</string>
    <string name="toast_please_insert">Please insert to do</string>
    <string name="toast_done">Done Task</string>
    <string name="toast_please_insert_data">Please insert enough data</string>
    <string name="toast_creat_now">Create Now</string>
    <string name="toast_permission_denied">Permission denied</string>
    <string name="dialog_title_change_avatar">Change the Avatar</string>
    <string name="title_button_open_camera">Open Camera</string>
    <string name="title_button_open_gallery">Open Gallery</string>
    <string name="tab_layout_todo">TODO</string>
    <string name="tab_layout_done">DONE</string>
    <string name="title_menu_edit">Edit Profile</string>
    <string name="title_menu_logout">Log out</string>
    <string name="title_action_change_avatar">Do you want Change the Avatar</string>

</resources>
