<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_54_dp"
            android:layout_marginTop="@dimen/margin_top_28_dp"
            android:background="@drawable/custom_button"
            android:gravity="center"
            android:text="@string/textview_save_profile"
            android:textAllCaps="false"
            android:textColor="@color/color_while"
            android:textSize="16dp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/edtPhone" />

        <EditText
            android:id="@+id/edtPhone"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_edt_height_44dp"
            android:fontFamily="Nunito-Regular"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:text="@string/text_user_phone"
            android:textSize="16dp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/tvPhone"
            tools:ignore="Autofill,LabelFor" />

        <EditText
            android:hint="@string/hint_enter_your_email"
            android:id="@+id/edtEmail"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_edt_height_44dp"
            android:fontFamily="Nunito-Regular"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:text="@string/text_user_email"
            android:textSize="16dp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

        <EditText
            android:hint="@string/hint_enter_your_bio"
            android:id="@+id/edtBio"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_edt_height_44dp"
            android:fontFamily="Nunito-Regular"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@string/text_user_bio"
            android:textSize="16dp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintHorizontal_bias="0.517"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/tvBio" />

        <EditText
            android:hint="@string/text_user_name"
            android:inputType="text"
            android:id="@+id/edtFullName"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_edt_height_44dp"
            android:fontFamily="Nunito-Regular"
            android:text="@string/text_user_name"
            android:textSize="16dp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/tvName"
            tools:ignore="Autofill,LabelFor" />

        <ImageView
            android:id="@+id/imgAvatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="18dp"
            android:src="@drawable/img_avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEditProfile" />

        <TextView
            android:id="@+id/tvEditPicture"
            android:layout_width="136dp"
            android:layout_height="21dp"
            android:layout_marginTop="8dp"
            android:fontFamily="Nunito-Bold"
            android:text="@string/textview_edit_profile_picture"
            android:textColor="@color/color_green"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgAvatar" />

        <TextView
            android:id="@+id/imgBtnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:drawableLeft="@drawable/ic_back_left_black_24dp"
            android:fontFamily="Nunito-Regular"
            android:text="@string/textview_back_to_profile"
            android:textColor="@color/color_gray"
            android:textSize="18dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tvPrivate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:fontFamily="Nunito-Bold"
            android:text="@string/textview_private_information"
            android:textColor="@color/color_black"
            android:textSize="16dp"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/edtBio" />

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="Nunito-Regular"
            android:text="@string/textview_phone"
            android:textColor="@color/color_gray"
            android:textSize="14dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvEditProfile"
            app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="Nunito-Regular"
            android:text="@string/textview_email"
            android:textColor="@color/color_gray"
            android:textSize="14dp"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/tvPrivate" />

        <TextView
            android:id="@+id/tvBio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="Nunito-Regular"
            android:text="@string/textview_bio"
            android:textColor="@color/color_gray"
            android:textSize="14dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvEditProfile"
            app:layout_constraintTop_toBottomOf="@+id/edtFullName" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="Nunito-Regular"
            android:text="@string/textview_full_name"
            android:textColor="@color/color_gray"
            android:textSize="14dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvEditProfile"
            app:layout_constraintTop_toBottomOf="@+id/tvEditPicture" />

        <TextView
            android:id="@+id/tvEditProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="Nunito-Bold"
            android:text="@string/textview_edit_profile"
            android:textColor="@color/color_black"
            android:textSize="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/imgBtnBack" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="25dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="25dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>