<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_54_dp"
            android:layout_marginTop="@dimen/margin_top_28_dp"
            android:background="@drawable/custom_button"
            android:gravity="left|center_vertical"
            android:paddingLeft="@dimen/padding_left_20dp"
            android:text="@string/textview_login_button"
            android:textAllCaps="false"
            android:textColor="@color/color_while"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="@dimen/width_edt_362dp"
            android:layout_height="@dimen/height_edt_height_44dp"
            android:fontFamily="Nunito-Regular"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:text="@string/text_password"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="@dimen/width_edt_362dp"
            android:layout_height="@dimen/height_edt_height_44dp"
            android:fontFamily="Nunito-Regular"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:text="@string/text_user_email"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ImageView
            android:id="@+id/imgBackGround"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_285"
            android:background="@drawable/img_bg"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="@dimen/width_logo_93_dp"
            android:layout_height="@dimen/height_logo_30_dp"
            android:background="@drawable/img_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <TextView
            android:id="@+id/txtNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_28_dp"
            android:fontFamily="Nunito-Regular"
            android:gravity="center"
            android:text="@string/textview_new_to_scratch"
            android:textColor="@color/color_gray"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

        <TextView
            android:id="@+id/tvLoginHere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="Nunito-Regular"
            android:text="@string/textview_create_account_here"
            android:textColor="@color/color_green"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtNew" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_28_dp"
            android:fontFamily="Nunito-Regular"
            android:text="@string/textview_password"
            android:textColor="@color/color_gray"
            android:textSize="14dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/edtEmail"
            app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_28_dp"
            android:fontFamily="Nunito-Regular"
            android:text="@string/textview_forgot_password"
            android:textColor="@color/color_title"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="@+id/edtEmail"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:fontFamily="Nunito-Regular"
            android:text="@string/textview_email_address"
            android:textColor="@color/color_gray"
            android:textSize="14dp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tvRequestLogin" />

        <TextView
            android:id="@+id/tvRequestLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_18_dp"
            android:fontFamily="Nunito-Regular"
            android:text="@string/textview_request_login"
            android:textColor="@color/color_title"
            android:textSize="14dp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/imgBackGround" />

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_40_dp"
            android:fontFamily="Nunito-Bold"
            android:text="@string/textview_welcome_back_scratch"
            android:textColor="@color/color_black"
            android:textSize="24dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="25dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="60dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>